-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.2
-
None
https://bugreports.qt.io/browse/QTBUG-68609 causes massive increase in TIFF file size.
The result of this change is that instead of packing the whole file in 1 big block it's now compressed in small strips (2 lines in my example) which completely ruins LZW compression.
The result is that the file size increases from 238k -> 370k.
Please re-open this bug and use a more suitable strip size.
- resulted from
-
QTBUG-68609 libqtiff image plugin does not set RowsPerStrip tag
-
- Closed
-