tiffhandler: improve stripsize

libtiff's default stripsize is tiny (8KB), so splitting the image into
such strips on writing would significantly hurt the compression
rate. Aim for 4MB strips instead.

Task-number: QTBUG-70820
Change-Id: I07a9a8c81edf62e802b4ae8d6729a76df15e42ac
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>